# SpaceAway

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/projects/-Users-dante-Projects-SpaceAway/memory/: project_terrain_status.md
.github/workflows/: ci.yml  release.yml
crates/sa_audio/: Cargo.toml
crates/sa_audio/src/: catalog.rs  channel.rs  lib.rs  spatial.rs
crates/sa_core/: Cargo.toml
crates/sa_core/src/: events.rs  lib.rs  resource.rs  time.rs
crates/sa_ecs/: Cargo.toml
crates/sa_ecs/src/: lib.rs  schedule.rs  world.rs
crates/sa_input/: Cargo.toml
crates/sa_input/src/: input_state.rs  keyboard.rs  lib.rs  mouse.rs
crates/sa_math/: Cargo.toml
crates/sa_math/src/: conversions.rs  coords.rs  lib.rs  units.rs
crates/sa_meshgen/: Cargo.toml
crates/sa_meshgen/src/: assembly.rs  auto_collider.rs  csg.rs  full_ship.rs  hull.rs  interactables.rs  lib.rs  mesh.rs  primitives.rs  primitives_ext.rs  ship_parts.rs  ship_parts_v2.rs  validate.rs
crates/sa_physics/: Cargo.toml
crates/sa_physics/src/: bodies.rs  colliders.rs  forces.rs  lib.rs  world.rs
crates/sa_player/: Cargo.toml
crates/sa_player/src/: controller.rs  lib.rs
crates/sa_render/: Cargo.toml
crates/sa_render/src/: camera.rs  gltf_loader.rs  gpu.rs  icosphere.rs  lib.rs  mesh.rs  nebula.rs  pipeline.rs  planet_mesh.rs  renderer.rs  screen_pipeline.rs  sky.rs  slab_allocator.rs  star_field.rs  terrain_pipeline.rs  terrain_vertex.rs  vertex.rs
crates/sa_render/src/shaders/: geometry.wgsl  nebula.wgsl  screen.wgsl  sky.wgsl  sky_blit.wgsl  stars.wgsl  terrain.wgsl
crates/sa_ship/: Cargo.toml
crates/sa_ship/src/: drive.rs  helm.rs  interactable.rs  interaction.rs  lib.rs  ship.rs  station.rs
crates/sa_survival/: Cargo.toml
crates/sa_survival/src/: deposits.rs  lib.rs  resources.rs  suit.rs
crates/sa_terrain/: Cargo.toml
crates/sa_terrain/src/: biome.rs  chunk.rs  collision_grid.rs  config.rs  cube_sphere.rs  frustum.rs  gravity.rs  heightmap.rs  lib.rs  quadtree.rs  streaming.rs
crates/sa_terrain/tests/: terrain_tests.rs
crates/sa_universe/: Cargo.toml
crates/sa_universe/src/: galaxy.rs  lib.rs  object_id.rs  query.rs  sector.rs  seed.rs  star.rs  system.rs
crates/sa_universe/tests/: brightness_analysis.rs  nebula_diagnostic.rs  perf_analysis.rs
crates/spaceaway/: Cargo.toml
crates/spaceaway/src/: approach.rs  constants.rs  debug_state.rs  drive_integration.rs  frame_update.rs  game_helpers.rs  game_systems.rs  helm_mode.rs  input_handler.rs  landing.rs  lib.rs  main.rs  menu.rs  menu_render.rs  mesh_utils.rs  navigation.rs  render_frame.rs  ship_colliders.rs  ship_setup.rs  sky.rs  solar_system.rs  star_streaming.rs  terrain_colliders.rs  terrain_integration.rs  walk_mode.rs
crates/spaceaway/src/menu/: menu_scenes.rs  mod.rs
crates/spaceaway/src/ui/: helm_screen.rs  hud.rs  mod.rs  sensors_screen.rs  visor.rs
crates/spaceaway/tests/: full_descent_test.rs  landing_physics_test.rs
docs/: collision-system-standards.md  debugging-tools-research.md  interior-standards.md  modular-ship-standards.md  overnight-report.md  overnight-session-prompt.md  performance-techniques.md  planet-sprint-research.md  ship-design-guide.md  ui-system-research.md
docs/analysis/: kinematic-movement-deep-analysis.md  player-sliding-root-cause.md  ship-rotation-root-cause.md  wall-push-force-analysis.md
docs/completed/plans/: 2026-03-27-phase4-procedural-universe.md  2026-03-27-phase45-galaxy-structure.md
docs/completed/specs/: 2026-03-27-phase5a-ship-core-design.md  2026-03-29-landing-system-design.md
docs/superpowers/debug-prompts/: 2026-03-31-coordinate-sync-audit.md  2026-03-31-terrain-collision-polish.md
docs/superpowers/plans/: 2026-03-27-meshgen.md  2026-03-27-phase1-foundation.md  2026-03-27-phase2-renderer.md  2026-03-27-phase3-physics-player.md  2026-03-27-phase5a-ship-core.md  2026-03-28-audio-system.md  2026-03-28-main-menu.md  2026-03-28-phase5b-gameplay-loop.md  2026-03-28-phase5c-ui-monitors.md  2026-03-28-solar-system-from-space.md  2026-03-28-travel-system.md  2026-03-28-visor-hud.md  2026-03-29-cdlod-terrain-phase1.md  2026-03-29-cdlod-terrain-phase2.md  2026-03-29-landing-system.md  2026-03-29-smooth-navigation.md  2026-03-30-approach-landing.md  2026-03-30-terrain-redesign.md
docs/superpowers/specs/: 2026-03-27-galaxy-structure-design.md  2026-03-27-meshgen-design.md  2026-03-27-spaceaway-engine-design.md  2026-03-28-audio-system-design.md  2026-03-28-main-menu-design.md  2026-03-28-phase5b-gameplay-loop-design.md  2026-03-28-phase5c-ui-monitors-design.md  2026-03-28-solar-system-from-space-design.md  2026-03-28-travel-system-design.md  2026-03-28-visor-hud-design.md  2026-03-29-cdlod-terrain-design.md  2026-03-29-smooth-navigation-design.md  2026-03-30-approach-landing-design.md  2026-03-30-terrain-redesign.md
