[workspace]
resolver = "2"
members = [
    "crates/sa_core",
    "crates/sa_math",
    "crates/sa_ecs",
    "crates/sa_input",
    "crates/sa_render",
    "crates/sa_physics",
    "crates/sa_player",
    "crates/sa_universe",
    "crates/sa_meshgen",
    "crates/sa_ship",
    "crates/sa_survival",
    "crates/spaceaway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Core
glam = { version = "0.29", features = ["serde"] }
hecs = "0.10"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# Windowing & Graphics
winit = "0.30"
wgpu = "24"

# Logging
log = "0.4"
env_logger = "0.11"
pollster = "0.4"

bytemuck = { version = "1", features = ["derive"] }

# Physics
rapier3d = { version = "0.22", features = ["simd-stable"] }

# Internal crates
sa_core = { path = "crates/sa_core" }
sa_math = { path = "crates/sa_math" }
sa_ecs = { path = "crates/sa_ecs" }
sa_input = { path = "crates/sa_input" }
sa_render = { path = "crates/sa_render" }
sa_physics = { path = "crates/sa_physics" }
sa_player = { path = "crates/sa_player" }
sa_universe = { path = "crates/sa_universe" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
csgrs = { version = "0.20", default-features = false, features = ["f32", "earcut"] }
nalgebra = "0.33"
sa_meshgen = { path = "crates/sa_meshgen" }
sa_ship = { path = "crates/sa_ship" }
sa_survival = { path = "crates/sa_survival" }
egui = "0.31"
egui-wgpu = { version = "0.31", default-features = false }
