[package]
name = "sa_player"
version.workspace = true
edition.workspace = true

[dependencies]
glam.workspace = true
log.workspace = true
sa_core.workspace = true
sa_math.workspace = true
sa_physics.workspace = true
sa_input.workspace = true
nalgebra.workspace = true
rapier3d.workspace = true
winit.workspace = true
