[package]
name = "sa_render"
version.workspace = true
edition.workspace = true

[dependencies]
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
bytemuck.workspace = true
log.workspace = true
sa_core.workspace = true
sa_math.workspace = true
pollster.workspace = true
fastnoise-lite.workspace = true
gltf.workspace = true
sa_universe.workspace = true
wgpu-profiler.workspace = true
profiling.workspace = true
