[package]
name = "spaceaway"
version.workspace = true
edition.workspace = true

[dependencies]
sa_core.workspace = true
sa_math.workspace = true
sa_ecs.workspace = true
sa_render.workspace = true
sa_input.workspace = true
glam.workspace = true
bytemuck.workspace = true
winit.workspace = true
wgpu.workspace = true
sa_physics.workspace = true
sa_player.workspace = true
sa_universe.workspace = true
rapier3d.workspace = true
log.workspace = true
env_logger.workspace = true
pollster.workspace = true
sa_meshgen.workspace = true
sa_ship.workspace = true
sa_survival.workspace = true
nalgebra.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
